test/files/neg/t877.check
t877.scala:3: error: Invalid literal number
trait Foo extends A(22A, Bug!) {}
                    ^
t877.scala:3: error: ')' expected but eof found.
trait Foo extends A(22A, Bug!) {}
                                 ^
two errors found
